--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,9 +40,9 @@ jobs:
         cd mjtest
         git submodule update --init
         MJ_RUN='/home/runner/work/compiler-minijava/compiler-minijava/run' ./mjt.py lexer --ci_testing --parallel
+        cd ../compiler-minijava
     - name: Copy Artifacts
       run: |
-        cd compiler-minijava
         mkdir staging && cp target/*.jar staging
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
