add parser tests to ci

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,6 +48,11 @@ jobs:
           pwd
           ./run_mjtests.sh lexer
 
+      - name: Run Parser Tests
+        run: |
+          pwd
+          ./run_mjtests.sh syntax
+
       - name: Copy Artifacts
         run: |
           pwd
