--- a/.gitignore
+++ b/.gitignore
@@ -374,4 +374,4 @@ TSWLatexianTemp*
 # REVTeX puts footnotes in the bibliography by default, unless the nofootinbib
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
-#*Notes.bib
+#*Notes.bib__latexindent_temp.tex
