add AST test run to ci

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -53,6 +53,11 @@ jobs:
           pwd
           ./run_mjtests.sh syntax
 
+      - name: Run Ast Tests
+        run: |
+          pwd
+          ./run_mjtests.sh ast
+
       - name: Copy Artifacts
         run: |
           pwd
