add semantic tests to ci

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -58,6 +58,11 @@ jobs:
           pwd
           ./run_mjtests.sh ast
 
+      - name: Run Semantic Tests
+        run: |
+          pwd
+          ./run_mjtests.sh semantic
+
       - name: Copy Artifacts
         run: |
           pwd
