--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,4 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib__latexindent_temp.tex
+lib
