--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
         <maven.compiler.target>14</maven.compiler.target>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <build>
         <plugins>
             <plugin>
@@ -86,7 +93,16 @@
             <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.libfirm</groupId>
+            <artifactId>jFirm</artifactId>
+            <version>master-SNAPSHOT</version>
+        </dependency>
     </dependencies>
-
 
 </project>
