Attempt to fix issue with libfirm submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://git.scc.kit.edu/IPDSnelting/mjtest.git
 [submodule "libfirm"]
 	path = libfirm
-	url = http://pp.info.uni-karlsruhe.de/git/libfirm.git
+	url = https://pp.ipd.kit.edu/git/libfirm.git
