encoding in pom and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,8 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib__latexindent_temp.tex
+
+# firm graph files
+*.vcg
+# assembly files
+*.java.s
