add compile-firm to CI

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -62,6 +62,11 @@ jobs:
           pwd
           ./run_mjtests.sh semantic
 
+      - name: Run Transformation Tests
+        run: |
+          pwd
+          ./run_mjtests.sh compile-firm
+
       - name: Copy Artifacts
         run: |
           pwd
