--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
             <artifactId>jFirm</artifactId>
             <version>master-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.0.1-jre</version>
+        </dependency>
     </dependencies>
 
 </project>
