Add test case and enable compile-only tests
Thanks to whoever put that test case on mjtests

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -67,6 +67,11 @@ jobs:
           pwd
           ./run_mjtests.sh compile-firm
 
+      - name: Run Compile only Tests
+        run: |
+          pwd
+          ./run_mjtests.sh compile-only
+
       - name: Run Compile Tests
         run: |
           pwd
