--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 
     <repositories>
         <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
+            <id>deps</id>
+            <url>file:${project.basedir}/deps</url>
         </repository>
     </repositories>
 
@@ -68,12 +68,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>commons-cli</groupId>
+            <groupId>vendored.commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.5.0</version>
         </dependency>
         <dependency>
-            <groupId>org.projectlombok</groupId>
+            <groupId>vendored.org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.22</version>
         </dependency>
@@ -90,17 +90,17 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>net.java.dev.jna</groupId>
+            <groupId>vendored.net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
             <version>3.5.2</version>
         </dependency>
         <dependency>
-            <groupId>com.github.libfirm</groupId>
+            <groupId>vendored.com.github.libfirm</groupId>
             <artifactId>jFirm</artifactId>
             <version>master-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.jgrapht</groupId>
+            <groupId>vendored.org.jgrapht</groupId>
             <artifactId>jgrapht-core</artifactId>
             <version>1.5.1</version>
         </dependency>
